fixed footer spacing

--- a/css/footer.css
+++ b/css/footer.css
@@ -15,6 +15,7 @@
 }
 
 .footerInfo p{
+    text-align: center;
     display: inline;
     margin-right: 2%;
     
